--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,8 @@
     <string name="app_name">RepositoryViewer</string>
     <string name="action_settings">Settings</string>
     <string name="button_start_text">start</string>
+
     <string name="hint_input_user_name_text">Input target user name.</string>
+    <string name="button_web_view_close_text">close</string>
+    <string name="please_input_user_name_text">↑ Please input user name. ↑</string>
 </resources>
